<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="search_title">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="activity_search">Это экран поиска</string>
    <string name="activity_library">Это экран медиатеки</string>
    <string name="chooser_share">Поделиться приложением через:</string>
    <string name="chooser_email">Отправить письмо через:</string>
    <string name="chooser_browser">Открыть через:</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">alesyanikul@yandex.by</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_empty">Ничего не нашлось</string>
    <string name="search_error">Проблемы со связью</string>
    <string name="error_subtitle">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="track_name">Yesterday (Remastered 2009)</string>
    <string name="singer">The Beatles</string>
    <string name="media_title">Медиатека</string>
    <string name="media_tab_favorites">Избранные треки</string>
    <string name="media_tab_playlists">Плейлисты</string>
    <string name="media_favorites_empty">Ваша медиатека пуста</string>
    <string name="media_new_playlist">Новый плейлист</string>
    <string name="media_playlists_empty">Вы не создали\nни одного плейлиста</string>

</resources>
