<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/root_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    android:padding="@dimen/padding_size">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/tv_title"
        android:fontFamily="@font/medium"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"/>

    <!-- Кнопка Поиск -->

    <com.google.android.material.button.MaterialButton
        style="@style/MainButtonStyle"
        android:id="@+id/btn_search"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <com.google.android.material.button.MaterialButton
        style="@style/MainButtonStyle"
        android:id="@+id/btn_library"
        android:text="@string/library"
        app:icon="@drawable/ic_media_library" />

    <com.google.android.material.button.MaterialButton
        style="@style/MainButtonStyle"
        android:id="@+id/btn_settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>
