<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_size"
    android:paddingEnd="@dimen/padding_size"
    android:background="@color/settings">

    <!-- Назад и Заголовок -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_size"
        android:text="@string/settings_title"
        android:textColor="@color/letters"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/bold"
        android:textStyle="bold" />

    <!-- Темная тема -->
    <LinearLayout
        style="@style/SettingsItemContainer"
        android:paddingVertical="@dimen/gap_size">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/dark_theme"
            android:gravity="center_vertical" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_theme"
            android:layout_width="56dp"
            android:layout_height="40dp"
            app:theme="@style/Color1SwitchStyle" />
    </LinearLayout>

    <!-- Поделиться приложением -->
    <LinearLayout
        android:id="@+id/btn_share"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/icon_share"
            style="@style/SettingsItemIcon"
            app:tint="@color/icon_support_color"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <!-- Написать в поддержку -->
    <LinearLayout
        android:id="@+id/btn_support"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/support" />

        <ImageView
            android:id="@+id/icon_support"
            app:tint="@color/icon_support_color"
            style="@style/SettingsItemIcon"
            android:src="@drawable/ic_support" />
    </LinearLayout>

    <!-- Пользовательское соглашение -->
    <LinearLayout
        android:id="@+id/btn_agreement"
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/terms" />

        <ImageView
            android:id="@+id/icon_arrow"
            app:tint="@color/icon_support_color"
            style="@style/SettingsItemIcon"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

</LinearLayout>
