<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_size"
    android:paddingEnd="@dimen/padding_size"
    android:background="@color/settings">

    <!-- Назад и Заголовок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/padding_size">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/layout_width_48"
            android:layout_height="@dimen/layout_width_48"
            android:src="@drawable/ic_back"
            app:tint="@color/icon_arrow_back_color"
            android:layout_marginEnd="@dimen/layout_width_0"/>

        <TextView
            android:id="@+id/tv_title"
            android:fontFamily="@font/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_size"
            android:text="@string/search_title"
            android:textColor="@color/letters"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <!-- Поле поиска -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_search"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:gravity="center_vertical">

        <!-- Иконка поиска -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:src="@drawable/ic_search"
            app:tint="@color/icon_search_color" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp">

            <EditText
                android:id="@+id/et_search"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/search_hint"
                android:textColor="@color/search_text"
                android:textColorHint="@color/icon_search_color"
                android:inputType="text"
                android:maxLines="1"
                android:ellipsize="end"/>

            <ImageView
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear_arrow_16"
                app:tint="@color/clear_button"
                android:layout_gravity="end|center_vertical"
                android:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tracks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="0dp"
        android:overScrollMode="ifContentScrolls"/>

    <!-- Плейсхолдер: ничего не найдено -->
    <LinearLayout
        android:id="@+id/placeholder_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="102dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_placeholder_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_empty"
            android:textColor="@color/letters"
            android:layout_marginTop="@dimen/text_size_16"
            android:textSize="19sp"
            android:fontFamily="@font/medium"/>
    </LinearLayout>

    <!-- Плейсхолдер: ошибка сервера -->
    <LinearLayout
        android:id="@+id/placeholder_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="102dp">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_placeholder_error"/>

        <TextView
            android:id="@+id/tv_error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search_error"
            android:textColor="@color/letters"
            android:textSize="19sp"
            android:fontFamily="@font/medium" />

        <TextView
            android:id="@+id/tv_error_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/error_subtitle"
            android:textColor="@color/letters"
            android:textSize="19sp"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:lines="3"
            android:ellipsize="end"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            style="@style/ErrorRetryButton"
            android:text="@string/retry"/>
    </LinearLayout>



</LinearLayout>
