<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="16dp"
    android:background="?attr/colorOnPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_size"
            android:paddingEnd="@dimen/padding_size">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="@dimen/layout_width_48"
                android:layout_height="@dimen/layout_width_48"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/icon_arrow_back_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coverContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <ImageView
                android:id="@+id/coverImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_cover"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_square"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/trackTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/medium"
            android:textSize="22sp"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="@string/track_name" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/medium"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="@string/singer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controls_block"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp">

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginStart="24dp"
                app:srcCompat="@drawable/ic_round_add"
                android:background="@drawable/round_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="?attr/colorOnPrimary"
                app:srcCompat="@drawable/ic_round_play"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btnFav"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_gray"
                app:srcCompat="@drawable/ic_favorite_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/trackTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/medium"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="00:00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:fontFamily="@font/regular"/>

                <TextView
                    android:id="@+id/valueDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:fontFamily="@font/regular"
                    tools:text="5:35"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:text="@string/album"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:fontFamily="@font/regular"/>

                <TextView
                    android:id="@+id/albumTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:fontFamily="@font/regular"
                    tools:text="Yesterday (Remastered 2009)"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:fontFamily="@font/regular"/>

                <TextView
                    android:id="@+id/releaseDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:fontFamily="@font/regular"
                    tools:text="1965"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:fontFamily="@font/regular"/>

                <TextView
                    android:id="@+id/genreTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:fontFamily="@font/regular"
                    tools:text="Rock"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:fontFamily="@font/regular"/>

                <TextView
                    android:id="@+id/countryTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="13sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:fontFamily="@font/regular"
                    tools:text="Великобритания"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
